--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+main {
+  padding-top:335px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 950px){
+  :root{
+      font-size: 12px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width:768px){
+  body{
+      width: 100vw;
+      margin:0;
+      padding: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  .main-page{
+      flex-direction:column-reverse;
+      padding: 10px;
+  }
+  .side-bar{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content:center;
+      width: 100vw;
+      padding: 10px;
+      margin:0;
+
+  }
+  .side-card {
+      width: 90%;
+      max-width: 270px;
+      margin: 0;
+  }
+  .main-box {
+      width: 100%;
+      margin: 0;
+  }
+  .main-body {
+      width: 100%;
+      margin:0;
+
+  }
+  .num-box{
+      flex-direction: column;
+      justify-content:center;
+      align-items: center;
+  }
+  .num-text {
+      margin-top: 20px;
+  }
+  #directions {
+      flex-direction: column;
+      align-items:center;
   }
 }
