--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,6 +3,9 @@
 }
 
 a, .nav-link:link, a:visited, .nav-link:visited {
+    font-family:'Indie Flower', Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size:20px;
     text-decoration: none;
     color:var(--dark);
 }
