--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,5 +1,5 @@
 sidebar {
-    padding-top:32vh;
+    padding-top:335px;
 }
 
 .side-card { 
@@ -24,6 +24,9 @@ h3 {
 .address {
     margin: 0;
     color: var(--dark);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:400;
+    font-size:1rem;
 }
 
 .address:link, .address:visited, .main-box a:link, .main-box a:visited  {
