--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -23,7 +23,7 @@ h3 {
 
 .address {
     margin: 0;
-    color: var(--dark);
+    color: black;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight:400;
     font-size:1rem;
@@ -31,7 +31,7 @@ h3 {
 
 .address:link, .address:visited, .main-box a:link, .main-box a:visited  {
     text-decoration:none;
-    color: var(--dark);
+    color: black;
 }
 
 .donor-logo {
